<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtRegistro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:title="@string/titRegistro"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="Check In"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_below="@+id/txtRegistro">

            <EditText
                android:id="@+id/caja_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bged_blue"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/usuario_ico"
                android:paddingLeft="20dp"
                android:textColor="@color/black"
                android:hint="Hora entrada"
                android:textColorHint="@color/black"
                android:drawablePadding="10dp"
                app:validateMinLength="@{8}"
                app:validateMaxLength="@{25}"
                validateEmpty="@{true}"
                app:validateDate='@{"hh:mm"}'
                app:validateDateMessage="@{@string/dateErrorMessage}"
                app:validateDateAutoDismiss="@{true}"
                />

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/signature_pad_container"
                android:layout_marginTop="40dp">

                <FrameLayout
                    android:layout_alignParentBottom="true"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

                <com.github.gcacace.signaturepad.views.SignaturePad
                    android:id="@+id/signaturePad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:penColor="@android:color/black" />
                <TextView
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/name"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_weight="0"
                android:id="@+id/buttons_container"
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/mClearButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/limpia"
                    android:enabled="false" />

                <Button
                    android:id="@+id/mSaveButton"
                    android:onClick="@{(v) -> clickListener.onClick(v)}"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/guarda"
                    android:enabled="false" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>
