<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent" android:layout_height="match_parent">

        <include
            android:id="@+id/barraP"
            layout="@layout/toolbar" />

            <!--<TextView
                android:id="@+id/txtRegistro"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:title="@string/titRegistro"
                android:textColor="@color/white"
                android:background="@color/black"
                android:text="Registro"
                android:textSize="20dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_below="@+id/barraP">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bged_blue"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/usuario_ico"
                android:paddingLeft="20dp"
                android:textColor="@color/black"
                android:drawablePadding="10dp"
                android:hint="Nombre"
                android:textColorHint="@color/black"
                app:validateMinLength="@{4}"
                app:validateMaxLength="@{10}"
                validateEmpty="@{true}"
                app:validateEmptyMessage="@{@string/emptyMessage}"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bged_blue"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/arroba_ico"
                android:paddingLeft="20dp"
                android:textColor="@color/black"
                android:drawablePadding="10dp"
                android:hint="Correo"
                android:textColorHint="@color/black"
                app:validateMinLength="@{8}"
                app:validateMaxLength="@{25}"
                validateEmpty="@{true}"
                app:validateType='@{"email"}'
                />

            <!--<EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bged_blue"
                android:layout_marginTop="30dp"
                android:paddingLeft="30dp"
                android:drawableRight="@drawable/arroba_ico"
                android:paddingRight="20dp"
                android:textColor="@color/black"
                android:hint="Contraseña"
                android:textColorHint="@color/black"
                android:drawablePadding="10dp"
                app:validateMinLength="@{4}"
                app:validateMaxLength="@{10}"
                validateEmpty="@{true}"
                app:validateEmptyMessage="@{@string/emptyMessage}"
                />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pass"
                android:textColorHint="@color/black"
                android:drawablePadding="10dp"
                app:endIconMode="password_toggle"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="15dp"
                app:expandedHintEnabled="false"
                app:hintTextColor="@color/black"
                android:layout_centerInParent="true"
                app:endIconTint="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/edit_text_black"
                    android:inputType="textPassword"
                    app:validateMinLength="@{4}"
                    app:validateMaxLength="@{10}"
                    validateEmpty="@{true}"
                    app:validateEmptyMessage="@{@string/emptyMessage}"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!--<EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bged_blue"
                android:layout_marginTop="30dp"
                android:paddingLeft="30dp"
                android:drawableRight="@drawable/arroba_ico"
                android:paddingRight="20dp"
                android:textColor="@color/black"
                android:hint="Confirmar contraseña"
                android:textColorHint="@color/black"
                android:drawablePadding="10dp"
                app:validateMinLength="@{4}"
                app:validateMaxLength="@{10}"
                validateEmpty="@{true}"
                app:validateEmptyMessage="@{@string/emptyMessage}"
                />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm"
                android:textColorHint="@color/black"
                android:drawablePadding="10dp"
                app:endIconMode="password_toggle"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="15dp"
                app:expandedHintEnabled="false"
                app:hintTextColor="@color/black"
                android:layout_centerInParent="true"
                app:endIconTint="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/edit_text_black"
                    android:inputType="textPassword"
                    app:validateMinLength="@{4}"
                    app:validateMaxLength="@{10}"
                    validateEmpty="@{true}"
                    app:validateEmptyMessage="@{@string/emptyMessage}"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                style="@style/btnSaid"
                android:text="Guarda Preference"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:onClick="@{(v) -> clickListener.onClick(v)}"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVer"
                style="@style/btnSaid"
                android:text="Ver Preference"
                android:layout_below="@id/btnSave"
                android:layout_centerHorizontal="true"
                android:onClick="@{(v) -> clickListener.onClick(v)}"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Acepto terminos y condiciones"
            android:layout_above="@+id/btnEva"
            android:layout_marginStart="20dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/btnSaid"
            android:id="@+id/btnEva"
            android:onClick="@{(v) -> clickListener.onClick(v)}"
            android:layout_height="wrap_content"
            android:text="@string/btnInicio"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            />



    </RelativeLayout>

</layout>